# DeepEP

./: README.md  install.sh  setup.py
.github/: copilot-instructions.md
.github/agents/: cuda-ipc-level-zero.agent.md  cuda-ipc-symmetric-memory-level-zero.agent.md  cuda-to-sycl-xpu.agent.md  xpu-migration-expert.agent.md  xpu-migration.agent.md  xpu-sync-order-reviewer.agent.md
.github/instructions/: kernels-primitives-ptx-to-sycl.instructions.md  kernels-xpu-layer-boundary.instructions.md
.github/skills/memory-semantics-and-ptx-assembly-converter/: SKILL.md
.github/skills/nvshmem-ibgda-to-ishmem/: SKILL.md
.github/skills/ptx-assembly-converter/: SKILL.md
csrc/: config.hpp  deep_ep.cpp  deep_ep.hpp  event.hpp  runtime.hpp  xpu_native_module.cpp  xpu_native_runtime.cpp  xpu_native_runtime.hpp  xpu_native_stubs.cpp
csrc/hybrid_ep/: config.cuh  coordinator.cuh  hybrid_ep.cu  hybrid_ep.cuh  pybind_hybrid_ep.cu  utils.cuh
csrc/hybrid_ep/allocator/: allocator.cu
csrc/hybrid_ep/backend/: hybrid_ep_backend.cuh
csrc/hybrid_ep/buffer/: internode.cu  internode.cuh  internode_doca.cu  internode_doca.cuh  internode_nixl.cu  internode_nixl.cuh  intranode.cu  intranode.cuh  nixl_connector.cu  nixl_connector.h
csrc/hybrid_ep/executor/: executor.cu  executor.cuh
csrc/hybrid_ep/extension/: allgather.cu  allgather.cuh  permute.cu  permute.cuh
csrc/hybrid_ep/jit/: compiler.cu  compiler.cuh
csrc/kernels/: api.cuh  buffer.cuh  configs.cuh  ibgda_device.cuh  internode.cu  internode_ll.cu  internode_ll_xpu.cpp  intranode.cu  intranode_xpu.cpp  ishmem_device.cuh  launch.cuh  layout.cu  runtime.cu  transport.hpp  transport_device.cuh  utils.cuh  xpu_compat.cuh
csrc/legacy/: buffer.hpp
csrc/xpu/: deep_ep_xpu.cpp  internode.sycl  internode_ll.sycl  intranode.sycl  layout.sycl  xpu_kernels.hpp  xpu_runtime.hpp
deep_ep/: __init__.py  _backend.py  _xpu_backend.py  _xpu_cpp_stub.py  buffer.py  hybrid_ep_buffer.py  utils.py
deep_ep/include/deep_ep/common/: ptx.cuh
docs/: Dockerfile.nixl  Hybrid-EP_Implementation.md  README_Hybrid-EP.md
tests/: test_graphed_hybrid_ep.py  test_hybrid_ep.py  test_internode.py  test_intranode.py  test_low_latency.py  utils.py
xpu/: MIGRATION_STATUS.md  MainSourceFiles.yaml  README.md  __init__.py  deep_ep_cpp_xpu.py  install.sh  setup.py
xpu/csrc/: CMakeLists.txt  config.hpp  config.hpp.yaml  deep_ep.cpp  deep_ep.cpp.dp.cpp  deep_ep.hpp  deep_ep.hpp.yaml  deep_ep_xpu_stub.cpp  event.hpp  event.hpp.yaml
xpu/csrc/build-staged/: CMakeCache.txt  Makefile  cmake_install.cmake
xpu/csrc/kernels/: CMakeLists.txt  api.cuh  api.dp.hpp  api.dp.hpp.yaml  buffer.dp.hpp  buffer.dp.hpp.yaml  configs.cuh  configs.dp.hpp  configs.dp.hpp.yaml  exception.cuh  exception.dp.hpp  exception.dp.hpp.yaml  ibgda_device.cuh  ibgda_device.dp.hpp  ibgda_device.dp.hpp.yaml  internode.cu  internode.dp.cpp  internode_ll.cu  internode_ll.dp.cpp  intranode.cu  intranode.dp.cpp  launch.cuh  launch.dp.hpp  launch.dp.hpp.yaml  layout.cu  layout.dp.cpp  runtime.cu  runtime.dp.cpp  utils.dp.hpp  utils.dp.hpp.yaml
xpu/deep_ep/: __init__.py  _extension.py  buffer.py  utils.py
xpu/deep_ep_xpu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xpu/tests/: conftest.py  test_internode.py  test_intranode.py  test_low_latency.py  test_xpu_buffer_fallbacks.py  test_xpu_force_python_stub.py  test_xpu_force_python_stub_dispatch_combine.py  test_xpu_force_python_stub_dispatch_layout.py  test_xpu_force_python_stub_low_latency.py  test_xpu_force_python_stub_low_latency_zero_copy.py  test_xpu_import.py  test_xpu_stub_backend.py  utils.py
